--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
+<body style="background-color:powderblue;">
 
-<h1>Battle!</h1>
+<h1 style="text-align:center;color:blue;">Battle!</h1>
+<img style='border: 3px dashed red' align=center; src='http://bit.ly/1eze8aE'>
+</div>
 <h2>Sign in to play</h2>
   <form action="/names" method="post">
     <label for="player_1_name">
