--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,6 @@
-<h1><%= @player_1_name %> vs. <%= @player_2_name %></h1>
+<h1 style="color:blue;"><%= @player_1_name %> vs. <%= @player_2_name %></h1>
 
-<%= @player_2_name %> 60HP
+<h2 style="color:red;"><%= @player_2_name %> <%= @player2_hp %>HP
 
 <form action="/attack">
   <input type="submit" value="Attack">
