--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,6 @@
-<h1 style="color:blue;"><%= @player_1_name %> vs. <%= @player_2_name %></h1>
+<h1 style="color:blue;"><%= @game.player_1.name %> vs. <%= @game.player_2.name %></h1>
 
-<h2 style="color:red;"><%= @player_2_name %> <%= @player2_hp %>HP
+<h2 style="color:red;"><%= @game.player_2.name %> <%= @game.player_2.hit_points %>HP
 
 <form action="/attack">
   <input type="submit" value="Attack">
