added turn change to model

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
-<p><%= @game.player_1.name %></p>
-<p><%= $game.player_1.name %></p>
+<!-- <p><%= @game.player_1.name %></p>
+<p><%= $game.player_1.name %></p> -->
 
 <h2><%= $game.player_1.name %> attacked <%= @game.player_2.name %></h2>
 
