--- a/views/play.erb
+++ b/views/play.erb
@@ -2,6 +2,8 @@
 
 <h2 style="color:red;"><%= @game.player_2.name %> <%= @game.player_2.hit_points %>HP
 
+<p><%= @game.turn %>'s turn</p>
+
 <form action="/attack">
   <input type="submit" value="Attack">
 </form>
